# quill

./: .env  Dockerfile  docker-compose.yml
examples/: CMakeLists.txt  compile_shared.sh  compile_static.sh  mingw-w64-x86_64.cmake  test_shared.sh  test_shared_gcc.sh  test_static.sh
examples/external_lib/: CMakeLists.txt  quill_wrapper.h
