cmake_minimum_required(VERSION 3.22)
project(singleton_example)

add_subdirectory(external_lib)

add_executable(example_trivial_static example_trivial.cpp)
target_include_directories(example_trivial_static PRIVATE quill_wrapper_static)
target_link_libraries(example_trivial_static PRIVATE quill_wrapper_static)

add_executable(example_trivial_shared example_trivial.cpp)
target_include_directories(example_trivial_shared PRIVATE quill_wrapper_shared)
target_link_libraries(example_trivial_shared PRIVATE quill_wrapper_shared)
